[package]
name = "test_multi_layers"
version = "0.1.0"
edition = "2021"
description = "Multi-Layer MM with Tiered Refresh"

[[bin]]
name = "test_multi_layers"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
futures-util = "0.3"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "net", "signal"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"
uuid = { version = "1", features = ["v4"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
